welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:10: error: value Yellow is not a member of object java.awt.Color
	brosse(c); avance(); brosse(Color.Yellow); gauche(); avance(); brosse(c)
                                          ^FlowerPot:22: error: value Pink is not a member of object java.awt.Color
growFlowers(Color.Pink)
                  ^